fix: more space on mobile devices

--- a/css/post.css
+++ b/css/post.css
@@ -51,6 +51,6 @@ li {
 
 @media screen and (max-width: 768px) {
   main {
-    width: 90vw;
+    width: 95vw;
   }
 }
